<resources>
    <string name="app_name">FinTrack</string>
    <string name="title_login">Login</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="str_etVirtualAcc">Nama Akun</string>
    <string name="str_etPassword">Masukkan Password</string>
    <string name="str_btnMasuk">Masuk</string>
    <string name="str_btnDaftar">Daftar</string>
    <string name="str_btnLogOut">Log Out</string>
    <string name="str_etSyaratDaftar">Nama akun minimal: 1 karakter (jangan whitespace)\nPassword minimal: 3 karakter</string>
    <string name="str_etPemasukan">Pemasukkan</string>
    <string name="str_etPengeluaran">Pengeluaran</string>
    <string name="str_etId">ID Data</string>
    <string name="str_btnCatat">Catat</string>
    <string name="str_btnEdit">Edit</string>
    <string name="str_btnHapus">Hapus</string>
    <string name="str_informasiUmum">Informasi Umum</string>
    <string name="str_editInformasiUmum">Edit Informasi Umum</string>
    <string name="str_cbGantiNamaAkun">Ganti Nama Akun</string>
    <string name="str_cbGantiPasswd">Ganti Password</string>
    <string name="str_etGantiNamaAkun">Nama Akun Baru</string>
    <string name="str_etGantiPasswd">Password Akun Baru</string>
    <string name="str_btnGanti">Ganti</string>
    <string name="str_btnHapusAkun">HAPUS AKUN</string>
    <string name="str_tvVersiAplikasi">FinTrack v1.0.1</string>
</resources>