<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvVersiAplikasi"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/str_tvVersiAplikasi"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnAkun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etVirtualAcc"
        android:spinnerMode="dropdown"
        android:layout_marginTop="64dp"
        android:minHeight="48dp"
        android:minWidth="48dp"/>

    <EditText
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/etVirtualAcc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="168dp"
        android:autofillHints="username"
        android:inputType="text"
        android:hint="@string/str_etVirtualAcc"
        android:visibility="invisible"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etVirtualAcc"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="@string/str_etPassword"
        android:textSize="20sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMasuk"
        app:layout_constraintStart_toEndOf="@id/btnDaftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:text="@string/str_btnMasuk"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDaftar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnMasuk"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:text="@string/str_btnDaftar"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSyaratDaftar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDaftar"
        android:text="@string/str_etSyaratDaftar"/>

</androidx.constraintlayout.widget.ConstraintLayout>